--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
       
     </style>
   </head>
   <body>
-    <form action="/index.html" name="formValidacion" id="formValidacion" method="post" class="form" onsubmit="enviarFormulario();">
+    <form action="/index.html" name="formValidacion" id="formValidacion" method="post" class="form" onsubmit="enviarFormulario()">
         <div class="form-field">
             <label for="nombre" class="input" >Nombre del Producto</label>
-            <input type="text" name="nombre" id="nombre"/>
+            <input type="text" name="nombre" id="nombre" data-validate/>
         </div>
         <div class="form-field">
             <label for="precio" class="input">Precio $</label>
@@ -21,11 +22,11 @@
         </div>      
         <div class="form-field">
             <label for="cantidad" class="input">Cantidad</label>
-            <input type="number" name="cantidad" id="cantidad"/>
+            <input type="number" name="cantidad" id="cantidad" data-validate/>
         </div>
         <div class="form-field descripcion">
             <label for="descripcion" class="input">Descripcion</label>
-            <textarea name="descripcion" id="descripcion" rows="10"></textarea>
+            <textarea name="descripcion" id="descripcion" rows="10" data-validate ></textarea>
         </div>
         <div class="form-field categoria">
             <p>Categoria</p>
@@ -38,9 +39,9 @@
         <div class="form-field estado">
             <p >Estado</p>
           <label for="usado">Usado </label>
-            <input type="checkbox" name="estado" id="usado" value="usado" />
+            <input type="checkbox" name="estado" id="usado" value="usado" data-validate/>
           <labe for="nuevo">Nuevo </labe>
-            <input type="checkbox" name="estado" value="nuevo" id="nuevo" />
+            <input type="checkbox" name="estado" value="nuevo" id="nuevo" data-validate/>
         </div>
 
       <button onclick="validar()" type="submit">Enviar</button>
