formulario completo validado falta validar select

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="form-field estado">
             <p >Estado</p>
           <label for="usado">Usado </label>
-            <input type="checkbox" name="estado" id="usado" value="usado" data-validate/>
+            <input type="checkbox" name="estado" id="usado" value="usado" />
           <labe for="nuevo">Nuevo </labe>
-            <input type="checkbox" name="estado" value="nuevo" id="nuevo" data-validate/>
+            <input type="checkbox" name="estado" value="nuevo" id="nuevo" />
         </div>
 
       <button onclick="validar()" type="submit">Enviar</button>
