Añadimos el modal aun sin funcionalidad

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
       <button onclick="validarCampos()" type="submit">Enviar</button>
     </form>
+    
+    <button id="cerrar-modal" class="bx">
+      <strong><i class='bx bx-window-close'></i></strong>
+  </button>
     <script type="text/javascript" src="./js/index.js"></script>
     <script src="./js/index_dom.js" type="module" ></script>
   </body>
